correct gap size

--- a/recipe_page/global.css
+++ b/recipe_page/global.css
@@ -159,7 +159,7 @@ h2 {
 
 .contextContainer {
   padding: 0 2.5rem;
-  gap: 2.5rem;
+  gap: 2rem;
   flex-direction: column;
 }
 
